--- a/CourseRegistrationSystem/CourseRegister/pom.xml
+++ b/CourseRegistrationSystem/CourseRegister/pom.xml
@@ -11,11 +11,12 @@
     <groupId>com.example</groupId>
     <artifactId>CourseRegister</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>CourseRegister</name>
     <description>CourseRegister</description>
+
     <properties>
-        <java.version>17</java.version>
+        <java.version>8</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -56,7 +57,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
     </dependencies>
 
